--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "https://github.com/Skip-SBT/Upshift",
   "name": "upshift",
   "version": "1.0.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@emotion/react": "~11.14.0",
     "@emotion/styled": "~11.14.0",
