Basic footer without data

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Skip-SBT/Upshift",
+  "homepage": "https://skip-sbt.github.io/Upshift",
   "name": "upshift",
   "version": "1.0.0",
   "private": false,
