--- a/package.json
+++ b/package.json
@@ -11,22 +11,22 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
+    "del": "^8.0.0",
     "framer-motion": "^12.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
-    "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
-    "web-vitals": "^4.2.4"
+    "web-vitals": "^4.2.4",
+    "webpack-stream": "^7.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "gulp",
+    "build": "gulp clean && npx webpack --config webpack.config.js && gulp styles && gulp html",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "test": "echo 'No test runner configured yet'",
     "lint:fix": "eslint . --fix",
     "lint:no-fix": "eslint ."
   },
@@ -49,13 +49,27 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.26.7",
+    "@babel/preset-env": "^7.26.7",
+    "@babel/preset-react": "^7.26.3",
     "@svgr/webpack": "^8.1.0",
     "@types/react-slick": "^0.23.13",
+    "babel-loader": "^9.2.1",
+    "browser-sync": "^3.0.3",
     "css-loader": "^7.1.2",
     "file-loader": "^6.2.0",
     "gh-pages": "^6.3.0",
+    "gulp": "^5.0.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-sass": "^6.0.0",
+    "gulp-uglify": "^3.0.2",
+    "html-webpack-plugin": "^5.6.3",
     "sass": "^1.83.4",
     "sass-loader": "^16.0.4",
-    "style-loader": "^4.0.0"
+    "style-loader": "^4.0.0",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0"
   }
 }
