--- a/package.json
+++ b/package.json
@@ -11,24 +11,45 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
+    "circular-dependency-plugin": "^5.2.2",
+    "copy-webpack-plugin": "^12.0.2",
+    "css-minimizer-webpack-plugin": "^7.0.0",
     "del": "^8.0.0",
+    "dotenv": "^16.4.7",
+    "eslint": "^9.20.0",
+    "execa": "^9.5.2",
+    "fork-ts-checker-webpack-plugin": "^9.0.2",
     "framer-motion": "^12.0.6",
+    "i18next": "^24.2.2",
+    "i18next-parser": "^9.1.0",
+    "mini-css-extract-plugin": "^2.9.2",
+    "mini-svg-data-uri": "^1.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.4.0",
     "react-router-dom": "^7.1.3",
     "react-slick": "^0.30.3",
+    "rimraf": "^6.0.1",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^4.2.4",
     "webpack-stream": "^7.0.0"
   },
   "scripts": {
-    "start": "gulp",
+    "start": "gulp start",
+    "stats": "gulp stats",
+    "build:dev": "gulp build:dev",
+    "build:prod": "gulp build:prod",
     "build": "gulp clean && npx webpack --config webpack.config.js && gulp styles && gulp html",
+    "check:eslint": "gulp eslint",
+    "check:eslint:fix": "gulp eslint:fix",
+    "check:stylelint": "gulp stylelint",
+    "check:stylelint:fix": "gulp stylelint:fix",
+    "check:spellcheck": "gulp spellcheck",
+    "check:all": "gulp check:all",
+    "reset": "gulp reset",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "test": "echo 'No test runner configured yet'",
-    "lint:fix": "eslint . --fix",
-    "lint:no-fix": "eslint ."
+    "bump-version": "gulp bump-version"
   },
   "eslintConfig": {
     "extends": [
@@ -49,10 +70,12 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.26.7",
-    "@babel/preset-env": "^7.26.7",
+    "@babel/core": "^7.26.8",
+    "@babel/preset-env": "^7.26.8",
     "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.26.0",
     "@svgr/webpack": "^8.1.0",
+    "@types/react-i18next": "^8.1.0",
     "@types/react-slick": "^0.23.13",
     "babel-loader": "^9.2.1",
     "browser-sync": "^3.0.3",
@@ -68,6 +91,8 @@
     "sass": "^1.83.4",
     "sass-loader": "^16.0.4",
     "style-loader": "^4.0.0",
+    "ts-loader": "^9.5.2",
+    "typescript": "^5.7.3",
     "webpack": "^5.97.1",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0"
