--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
+    "@typescript-eslint/eslint-plugin": "^8.23.0",
+    "@typescript-eslint/parser": "^8.23.0",
     "circular-dependency-plugin": "^5.2.2",
     "copy-webpack-plugin": "^12.0.2",
     "css-minimizer-webpack-plugin": "^7.0.0",
     "del": "^8.0.0",
     "dotenv": "^16.4.7",
-    "eslint": "^9.20.0",
+    "eslint-plugin-react-hooks": "^5.1.0",
     "execa": "^9.5.2",
     "fork-ts-checker-webpack-plugin": "^9.0.2",
     "framer-motion": "^12.0.6",
@@ -71,17 +73,25 @@
   },
   "devDependencies": {
     "@babel/core": "^7.26.8",
+    "@babel/eslint-parser": "^7.26.8",
     "@babel/preset-env": "^7.26.8",
     "@babel/preset-react": "^7.26.3",
     "@babel/preset-typescript": "^7.26.0",
+    "@eslint/js": "^9.20.0",
     "@svgr/webpack": "^8.1.0",
     "@types/react-i18next": "^8.1.0",
     "@types/react-slick": "^0.23.13",
     "babel-loader": "^9.2.1",
     "browser-sync": "^3.0.3",
     "css-loader": "^7.1.2",
+    "eslint": "^9.20.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-optimize-regex": "^1.2.1",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-redux": "^4.2.0",
     "file-loader": "^6.2.0",
     "gh-pages": "^6.3.0",
+    "globals": "^15.14.0",
     "gulp": "^5.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
