--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,4 +42,4 @@ jobs:
         run: npm ci
 
       - name: Run code eslint check
-        run: npm run lint:no-fix
+        run: npm run check:eslint
